--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8" />
         <title>Reservia</title>
     </head>
-
     <body>
         <header>
             <img src= images/logo/reservia@3x.png alt= "logo de Reservia">
@@ -16,5 +15,43 @@
                 </ul>
             </nav>
         </header>
+        <main>
+            <!--Section de recherche et filtres des hébergements-->
+            <section>
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou en pleine nature</p>
+                <div>
+                    <input type="search" />
+                    <input type="submit" value="Rechercher" />
+                </div>
+                <!--Ajouter les icones css-->
+                <div>
+                    <h2>Filtres</h2>
+                    <div>
+                        <h2>Economique</h2>
+                    </div>
+                    <div>
+                        <h2>Familial</h2>
+                    </div>
+                    <div>
+                        <h2>Romantique</h2>
+                    </div>
+                    <div>
+                        <h2>Animaux autorisés</h2>
+                    </div>
+                </div>
+                <div>
+                    <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
+            </section>
+            <section>
+
+            </section>
+            <section>
+
+            </section>
+            <footer>
+            </footer>
+        </main>
     </body>
 </html>
