--- a/index.html
+++ b/index.html
@@ -44,11 +44,99 @@
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
+            <!--Section des propositions de logements-->
             <section>
-
+                <div>
+                    <h1>Hébergements à Marseille</h1>
+                    <div class= "images">
+                        <img src= images\hebergements\4_small\cannebiere.jpg alt= "Auberge la Cannebière">
+                        <div>
+                            <h3>Auberge la Cannebière</h3>
+                            <p>Nuit à partir <strong>25€</strong></p>
+                            <!--mettre les étoiles-->
+                        </div>
+                    </div>
+                    <div class= "images">
+                        <img src= images\hebergements\4_small\port.jpg alt= "Hôtel du port">
+                        <div>
+                            <h3>Hôtel du port</h3>
+                            <p>Nuit à partir de 52€</p>
+                            <!--mettre les étoiles-->
+                        </div>
+                    </div>
+                    <div class= "images">
+                        <img src= images\hebergements\4_small\les_mouettes.jpg alt= "Hôtel Les mouettes">
+                        <div>
+                            <h3>Hôtel Les mouettes</h3>
+                            <p>Nuit à partir de 76€</p>
+                            <!--mettre les étoiles-->
+                        </div>
+                    </div>
+                    <div class= "images">
+                        <img src= images\hebergements\4_small\hotel_de_la_mer.jpg alt= "Hôtel de la mer">
+                        <div>
+                            <h3>Hôtel de la mer</h3>
+                            <p>Nuit à partir de 46€</p>
+                            <!--mettre les étoiles-->
+                        </div>
+                    </div>
+                    <div class= "images">
+                        <img src= images\hebergements\4_small\le_panier.jpg alt= "Auberge Le Panier">
+                        <div>
+                            <h3>Auberge Le Panier</h3>
+                            <p>Nuit à partir de <strong>23€</strong></p>
+                            <!--mettre les étoiles-->
+                        </div>
+                    </div>
+                    <div class= "images">
+                        <img src= images\hebergements\4_small\chez_amina.jpg alt= "Hôtel chez Amina">
+                        <div>
+                            <h3>Hôtel chez Amina</h3>
+                            <p>Nuit à partir de 96€</p>
+                            <!--mettre les étoiles-->
+                        </div>
+                    </div>
+                    <h3>Afficher plus</h3>
+                </div>
+                <!--Section populaire-->
+                <div>
+                    <div>
+                        <h1>Les plus populaires</h1>
+                        <!--Mettre une icone-->
+                    </div>
+                    <div class= "images">
+                        <img src= images\hebergements\4_small\hotel_le_soleil_matin.jpg alt=>
+                        <div>
+                            <h3>Hôtel Le soleil du matin</h3>
+                            <p>Nuit à partir de 128€</p>
+                            <!--mettre les étoiles-->
+                        </div>
+                    </div>
+                    <div class= "images">
+                        <img src= images\hebergements\4_small\au_coeur_de_leau.jpg alt=>
+                        <div>
+                            <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                            <p>Nuit à partir de 71€</p>
+                            <!--mettre les étoiles-->
+                        </div>
+                    </div>
+                    <div class= "images">
+                        <img src= images\hebergements\4_small\tout_bleu_et_blanc.jpg  alt= "Hôtel Tout bleu et Blanc">
+                        <div>
+                            <h3>Hôtel Tout bleu et Blanc</h3>
+                            <p>Nuit à partir de 68€</p>
+                            <!--mettre les étoiles-->
+                        </div>
+                    </div>
+                </div>
             </section>
+            <!--Section des activités-->
             <section>
-
+                <h1>Activité à Marseille</h1>
+                <div class= "grandesimages">
+                    <img src= images\activites\2_large\Vieux_Port.jpg alt= "Vieux Port">
+                    <h3>Vieux Port</h3>
+                </div>
             </section>
             <footer>
             </footer>
