--- a/index.html
+++ b/index.html
@@ -137,9 +137,34 @@
                     <img src= images\activites\2_large\Vieux_Port.jpg alt= "Vieux Port">
                     <h3>Vieux Port</h3>
                 </div>
+                <div>
+                    <div class= "moyimages">
+                        <img src= images\activites\3_medium\fort_pomegues.jpg alt= "Fort de Pomègues">
+                        <h3>Fort de Pomègues</h3>
+                    </div>
+                    <div class= "moyimages">
+                        <img src= images\activites\3_medium\iles_du_frioul.jpg alt= "Îles du Frioul">
+                        <h3>Îles du Frioul</h3>
+                    </div>
+                </div>
+                <div class= "grandesimages">
+                    <img src= images\activites\2_large\Calanques.jpg alt= "Parc National des Calanques">
+                    <h3>Parc National des Calanques</h3>
+                </div>
+                <div>
+                    <div class= "moyimages">
+                        <img src= images\activites\3_medium\notre_dame.jpg alt= "Notre-Dame_de_la_Garde">
+                        <h3>Notre-Dame-de-la-Garde</h3>
+                    </div>
+                    <div class= "moyimages">
+                        <img src= images\activites\3_medium\parc_longchamp.jpg alt= "Parc Longchamp">
+                        <h3>Parc Longchamp</h3>
+                    </div>
+                </div>
             </section>
-            <footer>
-            </footer>
         </main>
+        <footer>
+        </footer>
+        
     </body>
 </html>
