--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
             <section>
                 <h1 id= "hébergements">Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
-                <div>
+                <div class= "icones">
                     <i class="fas fa-map-marker-alt"></i>
                     <input type="search" />
                     <input type="submit" value="Rechercher" />
                 </div>
-                <!--Ajouter les icones css-->
-                <div>
+                <div class= "icones">
                     <h2>Filtres</h2>
                     <div>
                         <i class="fas fa-money-bill-wave"></i>
@@ -48,7 +47,8 @@
                         <h2>Animaux autorisés</h2>
                     </div>
                 </div>
-                <div>
+                <div class= "icones">
+                    <i class="fas fa-info-circle"></i>
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
@@ -175,25 +175,19 @@
         <footer>
             <div>
                 <h3>A propos</h3>
-                <ul>
-                    <li>Fonctionnement du site</li>
-                    <li>Conditions générales de vente</li>
-                    <li>Données et confidentialité</li>
-                </ul>
+                    <p>Fonctionnement du site</p>
+                    <p>Conditions générales de vente</p>
+                    <p>Données et confidentialité</p>
             </div>
             <div>
                 <h3>Nos hébergements</h3>
-                <ul>
-                    <li>Charte de qualité</li>
-                    <li>Soumettre votre hôtel</li>
-                </ul>
+                    <p>Charte de qualité</p>
+                    <p>Soumettre votre hôtel</p>
             </div>
             <div>
                 <h3>Assistance</h3>
-                <ul>
-                    <li>Centre d'aide</li>
-                    <li>Nous contacter</li>
-                </ul>
+                    <p>Centre d'aide</p>
+                    <p>Nous contacter</p>
             </div>
         </footer>
     </body>
