--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <section>
                 <h1 id= "hébergements">Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
-                <div class= "icones">
+                <div id= "recherche">
                     <i class="fas fa-map-marker-alt"></i>
                     <input type="search" />
                     <input type="submit" value="Rechercher" />
                 </div>
-                <div class= "icones">
+                <div id= "filtres">
                     <h2>Filtres</h2>
                     <div>
                         <i class="fas fa-money-bill-wave"></i>
@@ -47,7 +47,7 @@
                         <h2>Animaux autorisés</h2>
                     </div>
                 </div>
-                <div class= "icones">
+                <div id= "information">
                     <i class="fas fa-info-circle"></i>
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
