--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src= images/logo/reservia@3x.png alt= "logo de Reservia">
                 <ul>
                     <li><a href= "#hébergements">Hébergements</a></li>
-                    <li><a href= "#activités">Activités</a></li>
+                    <li><a href= "#activit">Activités</a></li>
                     <li>S'inscrire</li>
                 </ul>
             </nav>
@@ -26,7 +26,7 @@
                 <div id= "recherche">
                     <i class="fas fa-map-marker-alt"></i>
                     <input type="search" />
-                    <input type="submit" value="Rechercher" />
+                    <input type="submit" value="Rechercher" /><br/>
                 </div>
                 <div id= "filtres">
                     <h2>Filtres</h2>
@@ -54,8 +54,8 @@
             </section>
             <!--Section des propositions de logements-->
             <section>
-                <div>
-                    <h1>Hébergements à Marseille</h1>
+                <h1>Hébergements à Marseille</h1>
+                <div id="presentation">
                     <div class= "images">
                         <img src= images\hebergements\4_small\cannebiere.jpg alt= "Auberge la Cannebière">
                         <div>
@@ -107,7 +107,7 @@
                     <h3>Afficher plus</h3>
                 </div>
                 <!--Section populaire-->
-                <div>
+                <div id="populaires">
                     <div>
                         <h1>Les plus populaires</h1>
                         <i class="fas fa-chart-line"></i>
@@ -139,8 +139,8 @@
                 </div>
             </section>
             <!--Section des activités-->
-            <section>
-                <h1 id= "activités">Activité à Marseille</h1>
+            <section id= "activités">
+                <h1 id= "activit">Activités à Marseille</h1>
                 <div class= "grandesimages">
                     <img src= images\activites\2_large\Vieux_Port.jpg alt= "Vieux Port">
                     <h3>Vieux Port</h3>
