--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
             </section>
             <!--Section des propositions de logements-->
-            <section>
+            <section id= "propositions">
                 <h1>Hébergements à Marseille</h1>
                 <div id="presentation">
                     <div class= "images">
@@ -104,15 +104,15 @@
                             <!--mettre les étoiles-->
                         </div>
                     </div>
-                    <h3>Afficher plus</h3>
+                        <h3>Afficher plus</h3>
                 </div>
                 <!--Section populaire-->
                 <div id="populaires">
-                    <div>
+                    <div id= "entete">
                         <h1>Les plus populaires</h1>
                         <i class="fas fa-chart-line"></i>
                     </div>
-                    <div class= "images">
+                    <div class= "imagescote">
                         <img src= images\hebergements\4_small\hotel_le_soleil_matin.jpg alt=>
                         <div>
                             <h3>Hôtel Le soleil du matin</h3>
@@ -120,7 +120,7 @@
                             <!--mettre les étoiles-->
                         </div>
                     </div>
-                    <div class= "images">
+                    <div class= "imagescote">
                         <img src= images\hebergements\4_small\au_coeur_de_leau.jpg alt=>
                         <div>
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
@@ -128,7 +128,7 @@
                             <!--mettre les étoiles-->
                         </div>
                     </div>
-                    <div class= "images">
+                    <div class= "imagescote">
                         <img src= images\hebergements\4_small\tout_bleu_et_blanc.jpg  alt= "Hôtel Tout bleu et Blanc">
                         <div>
                             <h3>Hôtel Tout bleu et Blanc</h3>
@@ -139,34 +139,36 @@
                 </div>
             </section>
             <!--Section des activités-->
-            <section id= "activités">
-                <h1 id= "activit">Activités à Marseille</h1>
-                <div class= "grandesimages">
-                    <img src= images\activites\2_large\Vieux_Port.jpg alt= "Vieux Port">
-                    <h3>Vieux Port</h3>
-                </div>
-                <div>
-                    <div class= "moyimages">
-                        <img src= images\activites\3_medium\fort_pomegues.jpg alt= "Fort de Pomègues">
-                        <h3>Fort de Pomègues</h3>
+            <section>
+                <h1 id= "activit">Activités à Marseille</h1></br>
+                <div id= "activités">
+                    <div class= "grandesimages">
+                        <img src= images\activites\2_large\Vieux_Port.jpg alt= "Vieux Port">
+                        <h3>Vieux Port</h3>
                     </div>
-                    <div class= "moyimages">
-                        <img src= images\activites\3_medium\iles_du_frioul.jpg alt= "Îles du Frioul">
-                        <h3>Îles du Frioul</h3>
+                    <div>
+                        <div class= "moyimages">
+                            <img src= images\activites\3_medium\fort_pomegues.jpg alt= "Fort de Pomègues">
+                            <h3>Fort de Pomègues</h3>
+                        </div>
+                        <div class= "moyimages">
+                            <img src= images\activites\3_medium\iles_du_frioul.jpg alt= "Îles du Frioul">
+                            <h3>Îles du Frioul</h3>
+                        </div>
                     </div>
-                </div>
-                <div class= "grandesimages">
-                    <img src= images\activites\2_large\Calanques.jpg alt= "Parc National des Calanques">
-                    <h3>Parc National des Calanques</h3>
-                </div>
-                <div>
-                    <div class= "moyimages">
-                        <img src= images\activites\3_medium\notre_dame.jpg alt= "Notre-Dame_de_la_Garde">
-                        <h3>Notre-Dame-de-la-Garde</h3>
+                    <div class= "grandesimages">
+                        <img src= images\activites\2_large\Calanques.jpg alt= "Parc National des Calanques">
+                        <h3>Parc National des Calanques</h3>
                     </div>
-                    <div class= "moyimages">
-                        <img src= images\activites\3_medium\parc_longchamp.jpg alt= "Parc Longchamp">
-                        <h3>Parc Longchamp</h3>
+                    <div>
+                        <div class= "moyimages">
+                            <img src= images\activites\3_medium\notre_dame.jpg alt= "Notre-Dame_de_la_Garde">
+                            <h3>Notre-Dame-de-la-Garde</h3>
+                        </div>
+                        <div class= "moyimages">
+                            <img src= images\activites\3_medium\parc_longchamp.jpg alt= "Parc Longchamp">
+                            <h3>Parc Longchamp</h3>
+                        </div>
                     </div>
                 </div>
             </section>
