Header et footer

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <p>En plein centre ville ou en pleine nature</p>
                 <div id= "recherche">
                     <i class="fas fa-map-marker-alt"></i>
-                    <input type="search" />
-                    <input type="submit" value="Rechercher" /><br/>
+                    <input id= "Barre" type="search" />
+                    <input id= "Bouton" type="submit" value="Rechercher" /><br/>
                 </div>
                 <div id= "filtres">
                     <h2>Filtres</h2>
