--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <script src="https://kit.fontawesome.com/153d2c7264.js" crossorigin="anonymous"></script>
     </head>
     <body>
+
         <!--HEADER-->
+
         <header>
             <nav>  
                 <img src= images/logo/reservia@3x.png alt= "logo de Reservia">
@@ -19,14 +21,16 @@
             </nav>
         </header>
         <main>
+
             <!--Section de recherche et filtres des hébergements-->
+
             <section>
                 <h1 id= "hébergements">Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
                 <div id= "recherche">
                     <i class="fas fa-map-marker-alt"></i>
-                    <input id= "Barre" type="search" />
-                    <input id= "Bouton" type="submit" value="Rechercher" /><br/>
+                    <input id= "barre" type="search" />
+                    <input id= "bouton" type="submit" value="Rechercher" /><br/>
                 </div>
                 <div id= "filtres">
                     <h2>Filtres</h2>
@@ -52,10 +56,12 @@
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
+
             <!--Section des propositions de logements-->
+
             <section id= "propositions">
-                <h1>Hébergements à Marseille</h1>
                 <div id="presentation">
+                    <h1>Hébergements à Marseille</h1>
                     <div class= "images">
                         <img src= images\hebergements\4_small\cannebiere.jpg alt= "Auberge la Cannebière">
                         <div>
@@ -106,7 +112,9 @@
                     </div>
                         <h3>Afficher plus</h3>
                 </div>
+
                 <!--Section populaire-->
+
                 <div id="populaires">
                     <div id= "entete">
                         <h1>Les plus populaires</h1>
@@ -138,7 +146,9 @@
                     </div>
                 </div>
             </section>
+
             <!--Section des activités-->
+
             <section>
                 <h1 id= "activit">Activités à Marseille</h1></br>
                 <div id= "activités">
@@ -173,7 +183,9 @@
                 </div>
             </section>
         </main>
+
         <!--FOOTER-->
+        
         <footer>
             <div>
                 <h3>A propos</h3>
