--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <nav>  
                 <img src= images/logo/reservia@3x.png alt= "logo de Reservia">
                 <ul>
-                    <li><a href= "#hébergements">Hébergements</a></li>
-                    <li><a href= "#activit">Activités</a></li>
-                    <li>S'inscrire</li>
+                    <li><a href= "#hébergements" class= "bouton1">Hébergements</a></li>
+                    <li><a href= "#activit" class= "bouton1">Activités</a></li>
+                    <li><a href ="#" class= "inscrire">S'inscrire</a></li>
                 </ul>
             </nav>
         </header>
@@ -30,7 +30,7 @@
                 <div id= "recherche">
                     <i class="fas fa-map-marker-alt"></i>
                     <input id= "barre" type="search" />
-                    <input id= "bouton" type="submit" value="Rechercher" /><br/>
+                    <input id= "bouton" type="submit" value="Rechercher"/><br/>
                 </div>
                 <div id= "filtres">
                     <h2>Filtres</h2>
@@ -62,52 +62,54 @@
             <section id= "propositions">
                 <div id="presentation">
                     <h1>Hébergements à Marseille</h1>
-                    <div class= "images">
-                        <img src= images\hebergements\4_small\cannebiere.jpg alt= "Auberge la Cannebière">
-                        <div>
-                            <h3>Auberge la Cannebière</h3>
-                            <p>Nuit à partir <em>25€</em></p>
-                            <!--mettre les étoiles-->
+                    <div id= "vignettes">
+                        <div class= "images">
+                            <img src= images\hebergements\4_small\cannebiere.jpg alt= "Auberge la Cannebière">
+                            <div class= "description">
+                                <h3>Auberge la Cannebière</h3>
+                                <p>Nuit à partir <em>25€</em></p>
+                                <!--mettre les étoiles-->
+                            </div>
                         </div>
-                    </div>
-                    <div class= "images">
-                        <img src= images\hebergements\4_small\port.jpg alt= "Hôtel du port">
-                        <div>
-                            <h3>Hôtel du port</h3>
-                            <p>Nuit à partir de 52€</p>
-                            <!--mettre les étoiles-->
+                        <div class= "images">
+                            <img src= images\hebergements\4_small\port.jpg alt= "Hôtel du port">
+                            <div class= "description">
+                                <h3>Hôtel du port</h3>
+                                <p>Nuit à partir de 52€</p>
+                                <!--mettre les étoiles-->
+                            </div>
                         </div>
-                    </div>
-                    <div class= "images">
-                        <img src= images\hebergements\4_small\les_mouettes.jpg alt= "Hôtel Les mouettes">
-                        <div>
-                            <h3>Hôtel Les mouettes</h3>
-                            <p>Nuit à partir de 76€</p>
-                            <!--mettre les étoiles-->
+                        <div class= "images">
+                            <img src= images\hebergements\4_small\les_mouettes.jpg alt= "Hôtel Les mouettes">
+                            <div class= "description">
+                                <h3>Hôtel Les mouettes</h3>
+                                <p>Nuit à partir de 76€</p>
+                                <!--mettre les étoiles-->
+                            </div>
                         </div>
-                    </div>
-                    <div class= "images">
-                        <img src= images\hebergements\4_small\hotel_de_la_mer.jpg alt= "Hôtel de la mer">
-                        <div>
-                            <h3>Hôtel de la mer</h3>
-                            <p>Nuit à partir de 46€</p>
-                            <!--mettre les étoiles-->
+                        <div class= "images">
+                            <img src= images\hebergements\4_small\hotel_de_la_mer.jpg alt= "Hôtel de la mer">
+                            <div class= "description">
+                                <h3>Hôtel de la mer</h3>
+                                <p>Nuit à partir de 46€</p>
+                                <!--mettre les étoiles-->
+                            </div>
                         </div>
-                    </div>
-                    <div class= "images">
-                        <img src= images\hebergements\4_small\le_panier.jpg alt= "Auberge Le Panier">
-                        <div>
-                            <h3>Auberge Le Panier</h3>
-                            <p>Nuit à partir de <em>23€</em></p>
-                            <!--mettre les étoiles-->
+                        <div class= "images">
+                            <img src= images\hebergements\4_small\le_panier.jpg alt= "Auberge Le Panier">
+                            <div class= "description">
+                                <h3>Auberge Le Panier</h3>
+                                <p>Nuit à partir de <em>23€</em></p>
+                                <!--mettre les étoiles-->
+                            </div>
                         </div>
-                    </div>
-                    <div class= "images">
-                        <img src= images\hebergements\4_small\chez_amina.jpg alt= "Hôtel chez Amina">
-                        <div>
-                            <h3>Hôtel chez Amina</h3>
-                            <p>Nuit à partir de 96€</p>
-                            <!--mettre les étoiles-->
+                        <div class= "images">
+                            <img src= images\hebergements\4_small\chez_amina.jpg alt= "Hôtel chez Amina">
+                            <div class= "description">
+                                <h3>Hôtel chez Amina</h3>
+                                <p>Nuit à partir de 96€</p>
+                                <!--mettre les étoiles-->
+                            </div>
                         </div>
                     </div>
                         <h3>Afficher plus</h3>
