--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!--Section de recherche et filtres des hébergements-->
 
             <section>
-                <h1 id= "hébergements">Trouvez votre hébergement pour des vacances de rêve</h1>
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                 <p>En plein centre ville ou en pleine nature</p>
                 <div id= "recherche">
                     <i class="fas fa-map-marker-alt"></i>
@@ -34,25 +34,25 @@
                 </div>
                 <div id= "filtres">
                     <h2>Filtres</h2>
-                    <div>
+                    <a href = "#"class= bouton2>
                         <i class="fas fa-money-bill-wave"></i>
                         <h2>Economique</h2>
-                    </div>
-                    <div>
+                    </a>
+                    <a href = "#"class= bouton2>
                         <i class="fas fa-child"></i>
                         <h2>Familial</h2>
-                    </div>
-                    <div>
+                    </a>
+                    <a href = "#"class= bouton2>
                         <i class="fas fa-heart"></i>
                         <h2>Romantique</h2>
-                    </div>
-                    <div>
+                    </a>
+                    <a href = "#"class= bouton2>
                         <i class="fas fa-dog"></i>
                         <h2>Animaux autorisés</h2>
-                    </div>
+                    </a>
                 </div>
                 <div id= "information">
-                    <i class="fas fa-info-circle"></i>
+                    <i class="fas fa-info"></i>
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
@@ -61,56 +61,56 @@
 
             <section id= "propositions">
                 <div id="presentation">
-                    <h1>Hébergements à Marseille</h1>
+                    <h1 id= "hébergements">Hébergements à Marseille</h1>
                     <div id= "vignettes">
-                        <div class= "images">
+                        <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\cannebiere.jpg alt= "Auberge la Cannebière">
                             <div class= "description">
                                 <h3>Auberge la Cannebière</h3>
                                 <p>Nuit à partir <em>25€</em></p>
                                 <!--mettre les étoiles-->
                             </div>
-                        </div>
-                        <div class= "images">
+                        </a>
+                        <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\port.jpg alt= "Hôtel du port">
                             <div class= "description">
                                 <h3>Hôtel du port</h3>
                                 <p>Nuit à partir de 52€</p>
                                 <!--mettre les étoiles-->
                             </div>
-                        </div>
-                        <div class= "images">
+                        </a>
+                        <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\les_mouettes.jpg alt= "Hôtel Les mouettes">
                             <div class= "description">
                                 <h3>Hôtel Les mouettes</h3>
                                 <p>Nuit à partir de 76€</p>
                                 <!--mettre les étoiles-->
                             </div>
-                        </div>
-                        <div class= "images">
+                        </a>
+                        <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\hotel_de_la_mer.jpg alt= "Hôtel de la mer">
                             <div class= "description">
                                 <h3>Hôtel de la mer</h3>
                                 <p>Nuit à partir de 46€</p>
                                 <!--mettre les étoiles-->
                             </div>
-                        </div>
-                        <div class= "images">
+                        </a>
+                        <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\le_panier.jpg alt= "Auberge Le Panier">
                             <div class= "description">
                                 <h3>Auberge Le Panier</h3>
                                 <p>Nuit à partir de <em>23€</em></p>
                                 <!--mettre les étoiles-->
                             </div>
-                        </div>
-                        <div class= "images">
+                        </a>
+                        <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\chez_amina.jpg alt= "Hôtel chez Amina">
                             <div class= "description">
                                 <h3>Hôtel chez Amina</h3>
                                 <p>Nuit à partir de 96€</p>
                                 <!--mettre les étoiles-->
                             </div>
-                        </div>
+                        </a>
                     </div>
                         <h3>Afficher plus</h3>
                 </div>
@@ -122,30 +122,30 @@
                         <h1>Les plus populaires</h1>
                         <i class="fas fa-chart-line"></i>
                     </div>
-                    <div class= "imagescote">
+                    <a href= "#" class= "imagescote">
                         <img src= images\hebergements\4_small\hotel_le_soleil_matin.jpg alt=>
                         <div>
                             <h3>Hôtel Le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
                             <!--mettre les étoiles-->
                         </div>
-                    </div>
-                    <div class= "imagescote">
+                    </a>
+                    <a href= "#" class= "imagescote">
                         <img src= images\hebergements\4_small\au_coeur_de_leau.jpg alt=>
                         <div>
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <p>Nuit à partir de 71€</p>
                             <!--mettre les étoiles-->
                         </div>
-                    </div>
-                    <div class= "imagescote">
+                    </a>
+                    <a href= "#" class= "imagescote">
                         <img src= images\hebergements\4_small\tout_bleu_et_blanc.jpg  alt= "Hôtel Tout bleu et Blanc">
                         <div>
                             <h3>Hôtel Tout bleu et Blanc</h3>
                             <p>Nuit à partir de 68€</p>
                             <!--mettre les étoiles-->
                         </div>
-                    </div>
+                    </a>
                 </div>
             </section>
 
@@ -154,33 +154,33 @@
             <section>
                 <h1 id= "activit">Activités à Marseille</h1></br>
                 <div id= "activités">
-                    <div class= "grandesimages">
+                    <a href= "#" class= "grandesimages">
                         <img src= images\activites\2_large\Vieux_Port.jpg alt= "Vieux Port">
                         <h3>Vieux Port</h3>
-                    </div>
+                    </a>
                     <div>
-                        <div class= "moyimages">
+                        <a href = "#" class= "moyimages">
                             <img src= images\activites\3_medium\fort_pomegues.jpg alt= "Fort de Pomègues">
                             <h3>Fort de Pomègues</h3>
-                        </div>
-                        <div class= "moyimages">
+                        </a>
+                        <a href = "#" class= "moyimages">
                             <img src= images\activites\3_medium\iles_du_frioul.jpg alt= "Îles du Frioul">
                             <h3>Îles du Frioul</h3>
-                        </div>
+                        </a>
                     </div>
-                    <div class= "grandesimages">
+                    <a href= "#" class= "grandesimages">
                         <img src= images\activites\2_large\Calanques.jpg alt= "Parc National des Calanques">
                         <h3>Parc National des Calanques</h3>
-                    </div>
+                    </a>
                     <div>
-                        <div class= "moyimages">
+                        <a href = "#" class= "moyimages">
                             <img src= images\activites\3_medium\notre_dame.jpg alt= "Notre-Dame_de_la_Garde">
                             <h3>Notre-Dame-de-la-Garde</h3>
-                        </div>
-                        <div class= "moyimages">
+                        </a>
+                        <a href = "#" class= "moyimages">
                             <img src= images\activites\3_medium\parc_longchamp.jpg alt= "Parc Longchamp">
                             <h3>Parc Longchamp</h3>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </section>
@@ -191,19 +191,19 @@
         <footer>
             <div>
                 <h3>A propos</h3>
-                    <p>Fonctionnement du site</p>
-                    <p>Conditions générales de vente</p>
-                    <p>Données et confidentialité</p>
+                <p><a href="#">Fonctionnement du site</a></p>
+                <p><a href="#">Conditions générales de vente</a></p>
+                <p><a href="#">Données et confidentialité</a></p>
             </div>
             <div>
                 <h3>Nos hébergements</h3>
-                    <p>Charte de qualité</p>
-                    <p>Soumettre votre hôtel</p>
+                <p><a href="#">Charte de qualité</a></p>
+                <p><a href="#">Soumettre votre hôtel</a></p>
             </div>
             <div>
                 <h3>Assistance</h3>
-                    <p>Centre d'aide</p>
-                    <p>Nous contacter</p>
+                <p><a href="#">Centre d'aide</a></p>
+                <p><a href="#">Nous contacter</a></p>
             </div>
         </footer>
     </body>
