--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             </div>
                         </a>
                     </div>
-                        <h3>Afficher plus</h3>
+                    <h3><a href= "#">Afficher plus</a></h3>
                 </div>
 
                 <!--Section populaire-->
