--- a/index.html
+++ b/index.html
@@ -68,7 +68,17 @@
                             <div class= "description">
                                 <h3>Auberge la Cannebière</h3>
                                 <p>Nuit à partir <em>25€</em></p>
-                                <!--mettre les étoiles-->
+                                <div class= "etoiles">
+                                    <div class= "etoilespleines">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class= "etoilesvides">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <a href= "#" class= "images">
@@ -76,7 +86,13 @@
                             <div class= "description">
                                 <h3>Hôtel du port</h3>
                                 <p>Nuit à partir de 52€</p>
-                                <!--mettre les étoiles-->
+                                <div class= "etoilespleines">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
                             </div>
                         </a>
                         <a href= "#" class= "images">
@@ -84,7 +100,17 @@
                             <div class= "description">
                                 <h3>Hôtel Les mouettes</h3>
                                 <p>Nuit à partir de 76€</p>
-                                <!--mettre les étoiles-->
+                                <div class= "etoiles">
+                                    <div class= "etoilespleines">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class= "etoilesvides">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <a href= "#" class= "images">
@@ -92,7 +118,17 @@
                             <div class= "description">
                                 <h3>Hôtel de la mer</h3>
                                 <p>Nuit à partir de 46€</p>
-                                <!--mettre les étoiles-->
+                                <div class= "etoiles">
+                                    <div class= "etoilespleines">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class= "etoilesvides">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <a href= "#" class= "images">
@@ -100,7 +136,17 @@
                             <div class= "description">
                                 <h3>Auberge Le Panier</h3>
                                 <p>Nuit à partir de <em>23€</em></p>
-                                <!--mettre les étoiles-->
+                                <div class= "etoiles">
+                                    <div class= "etoilespleines">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class= "etoilesvides">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                </div>
                             </div>
                         </a>
                         <a href= "#" class= "images">
@@ -108,7 +154,13 @@
                             <div class= "description">
                                 <h3>Hôtel chez Amina</h3>
                                 <p>Nuit à partir de 96€</p>
-                                <!--mettre les étoiles-->
+                                <div class= "etoilespleines">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
                             </div>
                         </a>
                     </div>
@@ -127,7 +179,13 @@
                         <div>
                             <h3>Hôtel Le soleil du matin</h3>
                             <p>Nuit à partir de 128€</p>
-                            <!--mettre les étoiles-->
+                            <div class= "etoilespleines">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
                         </div>
                     </a>
                     <a href= "#" class= "imagescote">
@@ -135,7 +193,17 @@
                         <div>
                             <h3>Au coeur de l'eau Chambres d'hôtes</h3>
                             <p>Nuit à partir de 71€</p>
-                            <!--mettre les étoiles-->
+                            <div class= "etoiles">
+                                <div class= "etoilespleines">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class= "etoilesvides">
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
                         </div>
                     </a>
                     <a href= "#" class= "imagescote">
@@ -143,7 +211,17 @@
                         <div>
                             <h3>Hôtel Tout bleu et Blanc</h3>
                             <p>Nuit à partir de 68€</p>
-                            <!--mettre les étoiles-->
+                            <div class= "etoiles">
+                                <div class= "etoilespleines">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <div class= "etoilesvides">
+                                    <i class="fas fa-star"></i>
+                                </div>
+                            </div>
                         </div>
                     </a>
                 </div>
@@ -154,10 +232,12 @@
             <section>
                 <h1 id= "activit">Activités à Marseille</h1></br>
                 <div id= "activités">
-                    <a href= "#" class= "grandesimages">
+                    <div class= "grandesimages">
+                    <a href= "#">
                         <img src= images\activites\2_large\Vieux_Port.jpg alt= "Vieux Port">
                         <h3>Vieux Port</h3>
                     </a>
+                    </div>
                     <div>
                         <a href = "#" class= "moyimages">
                             <img src= images\activites\3_medium\fort_pomegues.jpg alt= "Fort de Pomègues">
