--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\cannebiere.jpg alt= "Auberge la Cannebière">
                             <div class= "description">
-                                <h3>Auberge la Cannebière</h3>
-                                <p>Nuit à partir <span>25€</span></p>
+                                <p><span class= "titrehébergement">Auberge la Cannebière</span></br>
+                                Nuit à partir <span>25€</span></p>
                                 <div class= "etoiles">
                                     <div class= "etoilespleines">
                                         <i class="fas fa-star"></i>
@@ -86,22 +86,24 @@
                         <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\port.jpg alt= "Hôtel du port">
                             <div class= "description">
-                                <h3>Hôtel du port</h3>
-                                <p>Nuit à partir de 52€</p>
-                                <div class= "etoilespleines">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                </div>
+                                <p><span class= "titrehébergement">Hôtel du port</span></br>
+                                Nuit à partir de 52€</p>
+                                <div class= "etoiles">
+                                    <div class= "etoilespleines">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                            </div>
                             </div>
                         </a>
                         <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\les_mouettes.jpg alt= "Hôtel Les mouettes">
                             <div class= "description">
-                                <h3>Hôtel Les mouettes</h3>
-                                <p>Nuit à partir de 76€</p>
+                                <p><span class= "titrehébergement">Hôtel Les mouettes</span></br>
+                                    Nuit à partir de 76€</p>
                                 <div class= "etoiles">
                                     <div class= "etoilespleines">
                                         <i class="fas fa-star"></i>
@@ -118,8 +120,8 @@
                         <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\hotel_de_la_mer.jpg alt= "Hôtel de la mer">
                             <div class= "description">
-                                <h3>Hôtel de la mer</h3>
-                                <p>Nuit à partir de 46€</p>
+                                <p><span class= "titrehébergement">Hôtel de la mer</span></br>
+                                    Nuit à partir de 46€</p>
                                 <div class= "etoiles">
                                     <div class= "etoilespleines">
                                         <i class="fas fa-star"></i>
@@ -136,8 +138,8 @@
                         <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\le_panier.jpg alt= "Auberge Le Panier">
                             <div class= "description">
-                                <h3>Auberge Le Panier</h3>
-                                <p>Nuit à partir de <span>23€</span></p>
+                                <p><span class= "titrehébergement">Auberge Le Panier</span></br>
+                                    Nuit à partir <span>23€</span></p>
                                 <div class= "etoiles">
                                     <div class= "etoilespleines">
                                         <i class="fas fa-star"></i>
@@ -154,14 +156,16 @@
                         <a href= "#" class= "images">
                             <img src= images\hebergements\4_small\chez_amina.jpg alt= "Hôtel chez Amina">
                             <div class= "description">
-                                <h3>Hôtel chez Amina</h3>
-                                <p>Nuit à partir de 96€</p>
-                                <div class= "etoilespleines">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
+                                <p><span class= "titrehébergement">Hôtel chez Amina</span></br>
+                                    Nuit à partir de 96€</p>
+                                <div class= "etoiles">
+                                    <div class= "etoilespleines">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
                                 </div>
                             </div>
                         </a>
@@ -174,28 +178,30 @@
                 <div id="populaires">
                     <div id= "entete">
                         <h1>Les plus populaires</h1>
-                        <i class="fas fa-chart-line"></i>
+                        <i class="fas fa-chart-line fa-lg"></i>
                     </div>
-                    <div>
+                    <div id= "test">
                         <a href= "#" class= "imagescote">
                             <img src= images\hebergements\4_small\hotel_le_soleil_matin.jpg alt=>
                             <div>
-                                <h3>Hôtel Le soleil du matin</h3>
-                                <p>Nuit à partir de 128€</p>
-                                <div class= "etoilespleines">
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                    <i class="fas fa-star"></i>
-                                </div>
+                                <p><span class= "titrehébergement">Hôtel Le soleil du matin</span></br>
+                                    Nuit à partir de 128€</p>
+                                <div class= "etoiles">
+                                    <div class= "etoilespleines">
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                            </div>
                             </div>
                         </a>
                         <a href= "#" class= "imagescote">
                             <img src= images\hebergements\4_small\au_coeur_de_leau.jpg alt=>
                             <div>
-                                <h3>Au coeur de l'eau Chambres d'hôtes</h3>
-                                <p>Nuit à partir de 71€</p>
+                                <p><span class= "titrehébergement">Au coeur de l'eau Chambres d'hôtes</span></br>
+                                    Nuit à partir de 71€</p>
                                 <div class= "etoiles">
                                     <div class= "etoilespleines">
                                         <i class="fas fa-star"></i>
@@ -212,8 +218,8 @@
                         <a href= "#" class= "imagescote">
                             <img src= images\hebergements\4_small\tout_bleu_et_blanc.jpg  alt= "Hôtel Tout bleu et Blanc">
                             <div>
-                                <h3>Hôtel Tout bleu et Blanc</h3>
-                                <p>Nuit à partir de 68€</p>
+                                <p><span class= "titrehébergement">Hôtel Tout bleu et Blanc</span></br>
+                                    Nuit à partir de 68€</p>
                                 <div class= "etoiles">
                                     <div class= "etoilespleines">
                                         <i class="fas fa-star"></i>
